--- a/style.css
+++ b/style.css
@@ -1,27 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300&display=swap');
+
 body {
+    font-family: 'Roboto', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 30px;
 }
+
 .container {
     display: flex;
     flex-wrap: wrap;
-    width: 430px;
-    height: 400px;
+    width: 320px;
+    height: 250px;
     cursor: pointer;
 }
 
 .cell {
     border: 1px solid black;
-    height: 25px;
-    width: 25px;
+    height: 18px;
+    width: 18px;
 }
 
-.cell:hover {
+.hover {
     background-color: brown;
 }
-
-  
-  
-  
