--- a/style.css
+++ b/style.css
@@ -1,28 +1,61 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,300&display=swap');
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 30px;
+    background-color: antiquewhite;
+}
+
+.content {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+}
+
+h1 {
+    
 }
 
 .container {
     display: flex;
     flex-wrap: wrap;
-    width: 320px;
-    height: 250px;
-    cursor: pointer;
+    width: 500px;
+    height: 500px;
+    cursor: crosshair;
+    background-color: white;
+    border: 2px solid red;
 }
 
 .cell {
     border: 1px solid black;
-    height: 18px;
-    width: 18px;
+    height: calc(500 / 30)px;
+    width: calc(500 / 30)px;
 }
 
 .hover {
     background-color: brown;
+}
+
+.right {
+    display: flex;
+    width: 200px;
+}
+
+.btn {
+    padding: 8px;
+    border: 2px solid black;
+    border-radius: 10px;
+    box-shadow: 2px 4px grey;
+    height: 50px;
+}
+
+.btn:hover {
+    background-color: lightgray;
 }
